# outlook-exporter-tui

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: AUDIT_SUMMARY.md  QUICKSTART.md  REFACTORING_SUMMARY.md  pseudocode.md
src/outlook_exporter/: __init__.py
src/outlook_exporter/core/: duplicates.py  models.py
src/outlook_exporter/exporters/: __init__.py  attachment.py  base.py  markdown.py  message.py
src/outlook_exporter/filters/: base.py  email_filters.py
src/outlook_exporter/outlook/: adapters.py  client.py
src/outlook_exporter/storage/: path_utils.py
src/outlook_exporter/utils/: exceptions.py
tests/: test_filter_logic.py
tests/unit/: test_filters.py  test_models.py  test_path_utils.py
tui/: __init__.py  app.css  app.py
