[project]
name = "outlook-attachments-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pywin32>=311",
    "tqdm>=4.66.0",
    "textual>=0.70.1",
    "rich>=13.0.0",
    "markitdown>=0.1.3",
    "markdownify>=0.13.1",
]

[project.scripts]
outlook-tui = "tui.app:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.setuptools.packages.find]
include = ["tui*"]
exclude = ["exports*", "docs*", "tests*"]
