[project]
name = "outlook-exporter"
version = "0.2.0"
description = "Export email attachments from Microsoft Outlook with filtering and duplicate detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pywin32>=311",
    "tqdm>=4.66.0",
    "textual>=0.70.1",
    "rich>=13.0.0",
    "markitdown>=0.1.3",
    "markdownify>=0.13.1",
]

[project.scripts]
outlook-export = "outlook_exporter.__main__:main"
outlook-tui = "outlook_exporter.tui.app:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
