[project]
name = "outlook-exporter"
version = "0.2.0"
description = "Export email attachments from Microsoft Outlook with filtering and duplicate detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pywin32>=311",
    "tqdm>=4.66.0",
    "textual>=0.70.1",
    "rich>=13.0.0",
    "markitdown>=0.1.3",
    "markdownify>=0.13.1",
]

[project.scripts]
outlook-export = "outlook_exporter.__main__:main"
outlook-tui = "outlook_exporter.tui.app:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable recommended rules plus additional quality checks
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint
    "RUF",   # Ruff-specific rules
]

# Ignore specific rules that conflict with the codebase style
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments (common in configuration)
    "PLR2004", # Magic value comparison (common in COM code)
    "N802",    # Function name should be lowercase (COM properties use PascalCase)
    "N803",    # Argument name should be lowercase (COM compatibility)
    "ARG002",  # Unused method argument (required by abstract methods)
    "SIM102",  # Collapsible if statements (sometimes clearer when separate)
]

# Allow specific patterns
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # Unused function argument (fixtures)
    "PLR2004", # Magic values (test data)
]
"main.py" = [
    "PLR0912", # Too many branches (legacy code)
    "PLR0915", # Too many statements (legacy code)
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect line length
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src/outlook_exporter",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/outlook_exporter"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
